<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    tools:ignore="LabelFor">

    <TextView
        android:id="@+id/amountText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="9dp"
        android:text="@string/amount"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/row1_col2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dateText"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/endTime"
        android:layout_width="199dp"
        android:layout_height="0dp"
        android:layout_marginBottom="173dp"
        android:text="@string/_3_00"
        android:textSize="30sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/endTimeText"
        app:layout_constraintTop_toBottomOf="@+id/startTime" />

    <TextView
        android:id="@+id/bid_coin"
        android:layout_width="156dp"
        android:layout_height="39dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/bidcoin"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/stratingTimeText"
        android:layout_width="199dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="123dp"
        android:layout_marginBottom="194dp"
        android:text="@string/started_at"
        android:textSize="30sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/endTimeText"
        android:layout_width="199dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        android:text="@string/end_at"
        android:textSize="30sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stratingTimeText" />

    <TextView
        android:id="@+id/startTime"
        android:layout_width="199dp"
        android:layout_height="0dp"
        android:layout_marginTop="123dp"
        android:layout_marginBottom="32dp"
        android:text="@string/_1_00"
        android:textSize="30sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/endTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/stratingTimeText"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/amount"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="79dp"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/previosBidText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stratingTimeText"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck"
        android:autofillHints="" />

    <TextView
        android:id="@+id/inputAmountText"
        android:layout_width="216dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:text="@string/input_amount"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="67dp"
        android:text="@string/place_bid"
        app:layout_constraintBottom_toTopOf="@+id/amountText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endTime" />

    <TextView
        android:id="@+id/previosBidText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="23dp"
        android:text="@string/previous_bids"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/dateText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amount" />

    <TextView
        android:id="@+id/dateText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="9dp"
        android:text="@string/date"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/row1_col1"
        app:layout_constraintEnd_toStartOf="@+id/amountText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/previosBidText" />

    <TextView
        android:id="@+id/row1_col1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_2022_05_20"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/row2_col1"
        app:layout_constraintEnd_toStartOf="@+id/row1_col2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateText" />

    <TextView
        android:id="@+id/row2_col1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="31dp"
        android:text="@string/_2022_05_22"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/row2_col2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/row1_col1" />

    <TextView
        android:id="@+id/row2_col2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="31dp"
        android:text="@string/_300"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/row2_col1"
        app:layout_constraintTop_toBottomOf="@+id/row1_col2" />

    <TextView
        android:id="@+id/row1_col2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_500"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/row2_col2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/row1_col1"
        app:layout_constraintTop_toBottomOf="@+id/amountText" />

</androidx.constraintlayout.widget.ConstraintLayout>